# ChangeLog for mail-filter/maildrop
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/maildrop/ChangeLog,v 1.109 2011/07/27 14:58:22 eras Exp $

  27 Jul 2011; Eray Aslan <eras@gentoo.org> maildrop-2.5.4.ebuild:
  Fix for default mailbox location in configure

  27 Jul 2011; Eray Aslan <eras@gentoo.org> maildrop-2.5.4.ebuild:
  Tie colliding files to tools USE flag - bugs #61116 #374009

*maildrop-2.5.4 (27 May 2011)

  27 May 2011; Eray Aslan <eras@gentoo.org> +maildrop-2.5.4.ebuild:
  Version bump

  15 May 2011; Kacper Kowalik <xarthisius@gentoo.org> maildrop-2.5.3.ebuild:
  Marked ~ppc64 wrt #366525

*maildrop-2.5.3 (06 May 2011)

  06 May 2011; Eray Aslan <eras@gentoo.org> +maildrop-2.5.3.ebuild:
  version bump

  16 Mar 2011; Eray Aslan <eras@gentoo.org> maildrop-2.4.2.ebuild,
  maildrop-2.5.1.ebuild:
  change to new style virtual/mda

*maildrop-2.5.1 (05 Oct 2010)

  05 Oct 2010; Torsten Veller <tove@gentoo.org> +maildrop-2.5.1.ebuild,
  +files/maildrop-2.5.1-db.patch:
  Version bump. Support db-5 too

  10 Apr 2010; Torsten Veller <tove@gentoo.org>
  -files/maildrop-1.8.0-db4-r1.patch, -files/maildrop-2.0.4-makedat.patch,
  -files/maildrop-2.1.0-db4.patch, -maildrop-2.2.0.ebuild,
  -maildrop-2.4.1.ebuild:
  Cleanup

  11 Mar 2010; Raúl Porcel <armin76@gentoo.org> maildrop-2.4.2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #308043

  10 Mar 2010; Jeroen Roovers <jer@gentoo.org> maildrop-2.4.2.ebuild:
  Stable for HPPA (bug #308043).

  09 Mar 2010; Joseph Jezak <josejx@gentoo.org> maildrop-2.4.2.ebuild:
  Marked ppc stable for bug #308043.

  08 Mar 2010; Markus Meier <maekke@gentoo.org> maildrop-2.4.2.ebuild:
  arm stable, bug #308043

  08 Mar 2010; Markus Meier <maekke@gentoo.org> maildrop-2.4.2.ebuild:
  amd64 stable, bug #308043

  08 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  maildrop-2.4.2.ebuild:
  stable x86, security bug 308043

*maildrop-2.4.2 (25 Feb 2010)
