@@ -12,23 +12,23 @@ DIST maildrop-2.5.4.tar.bz2 2082167 RMD160 a71c08fc2951dd122740870186693ac112e59
 EBUILD maildrop-2.4.2.ebuild 2843 RMD160 949aa62027ded33663700dea267b60c3e9094f37 SHA1 04a8fe51df3bccd3cc21381a1785f34633721d00 SHA256 3780da207704b88d6fe75e049aa34a3746bded8a328427dabc2e1d20961686e8
 EBUILD maildrop-2.5.1.ebuild 2891 RMD160 32c81f58c8a46dc388487c006aeaf3b28e217a65 SHA1 872e7718a1260efb0bee45543fa19a65604f33da SHA256 b7ab48048d48ac1d7988fbe0691aa2aa7891067fc71ecf80c76f51cf1ad456a9
 EBUILD maildrop-2.5.3.ebuild 2978 RMD160 c4f9f698af140adabd1afdc5fab3bac62165535e SHA1 a1ce6c7183da491271316691e0d030d2ff3337af SHA256 9819725773e66a16be7838353fc5abc52a979f2f3e6e35c6309dd912f159e747
-EBUILD maildrop-2.5.4.ebuild 3478 RMD160 1d9220054d622aabd13d00310f3c2419ffd29d5d SHA1 fcebabe152c2fbbb9ffee429dd2b9e0b15c2089a SHA256 03ad32f434cb8d515b341aa42a045299c0fcf85eb447f8f8a7d010714c1d94b0
-MISC ChangeLog 21406 RMD160 2ef830f4070189003ae5532f6ae79824b0f946c9 SHA1 523f3b2e422dbacc019253774e0800b884807895 SHA256 a385288ed1f938ab108dae3124928abbf47649deba5895879004692e538f2db7
+EBUILD maildrop-2.5.4.ebuild 3677 RMD160 19e4b9a035bab3045515c7817dde83b2b73ce9ff SHA1 04e28ff4bd3d8d07e7988d9a5424244cb4cd918c SHA256 a39262cc6c8495f0c1a27fffcbd6cc5b4168882ad6fc12c14a2f2d9ea0ab9ebe
+MISC ChangeLog 21519 RMD160 22b376ebc8675fc0ef2d74afda40d51db00788f6 SHA1 c3c632151509c3e9db00296fb8acd850819fb480 SHA256 4e69402b959136e84f138e68bdd5db0af58eea7eee94ffc245a66566aff59da7
 MISC metadata.xml 313 RMD160 a54c7c17c1fb1708ba9987cdad3e1f91bafd5e7e SHA1 c030dc401f831ea71224dbec6685200e34798962 SHA256 8e4845f749808afe7959162a14069b0eb59436401ee3a2ed8661a3bdc18fb5fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOMCecAAoJEHfx8XVYajsfIB8P/3YSAuzpq9YIZLhCavqZElkT
-3LnTvV6iiJOvWGKvd1BYCXqWtG5P8WSmmnYWH9pglS3uhmchNfUAeuTRaHDchI+2
-NeFoGK4/xb32IvrgXRhFAqpo3/d8agBU+2DqLvxOtGu/F8G/dPEPyojovfZeKymM
-I45XG/gYcOT2lGtTlCxItg2lnI0YxjrLTdAR/sb65hjeFabErpRvPb1aYGEXeriY
-UMcy5GgInzUyhAWKQ+FV2TlMH31TjNvVu1SjstppBNUV/Lu4YQ29nQEEF9RVPOMY
-l1Brq+LaKU6dl04Qkpz+yFglo4OnSuCNClAa+Vy91EccnoZbMnc++C38EwcaMysF
-36Oe95sMI3f/DoCwM7Or/n06ji7X03Hkb9xIA4W2QbqCAdQDekFYCG6S45yARl5r
-RPQW4EctkNjE/BaONHgn1YKJSJuKNPVUl64riGwT30LqIb6k4t/vinMFBOEY1l5M
-z2o3jGMErLLKSVPgIJkoX41jL9VHC9nWNOAYwtxpxLs5x1Vl7GMYpI4mq/SxvDRy
-r8R6PX/vNKDQJOMmmeUyvG8xhI+pZ9D11VNFiQPpQjq2OwImPEU664m8gfHNIkxN
-OTTpyW+zsrtNfOWOoh4kShrXGRqDXsMV3x4yFIavMvvn/MlYE5zCOqWZCu0GfTOu
-05ANIwzu66tlwI5VPka2
-=DjpH
+iQIcBAEBCAAGBQJOMDBLAAoJEHfx8XVYajsfZ7IQAILOR/xrqMmkCVqT1ybUAz+d
+ghA8N/BVl1OlswAJms3vSwndeIjzV9QzPBUhFkbhWsIgepq3RUE2wwW/mU8/Qr7g
+BNOBJe5QGlPGs3JxS1DREb8M3OJ8k1ygowAQ3KvMuTqh3OJfih3CQSylRd1OFgEk
+Rw7zk0gTMIMLGZ8pdAHFXf2i67m4mH9A0NPX/r8dQcESikrzxi6gnCQhom5upUR4
+7KgcSjbwvz9DrhcclbPI5QYg4zer8G2G2nrvn1VQ3ffR12fdAGifrMHm6dG+wzca
+fzHm/bMewV5+Tiv6i56e943YfIPKp1d45NzlqoMtQr52xzdYFFNMWSmEoXFz1gqj
+nbgCvppDnQoNb8Dut+nJBeJ3Ryr50aGtUx+acMUqCL1HBIUlnHOPb0z/L53SYznn
+kq9nxDYYbC8f+v5xkhGBzHIRaZr89KxBoH8pPpAFxdPQPvdjJsXKd6nvM5XSaYII
+dIPCW5REP2wMb+8OwbvPEbuSo9B3MVcoazW4lGP2i0zs1JZHvWuSplfUhzKvMFL1
+77DGnyTm5b+k23SkfA3XiBtWEgSJNiNazszKtU5ZeiD/5P3U6of51g+Ya99viU68
+Em+twP00NjSwAQWTqa8puAZXXN4NhJvrNTulGGATAhB2/JdEtcorgNg7e5ZEkSbZ
+g794XmVEv2svOTR4exbe
+=oy4q
 -----END PGP SIGNATURE-----
