@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/maildrop
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/maildrop/ChangeLog,v 1.109 2011/07/27 14:58:22 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/maildrop/ChangeLog,v 1.110 2011/07/27 15:35:26 eras Exp $
+
+  27 Jul 2011; Eray Aslan <eras@gentoo.org> maildrop-2.5.4.ebuild:
+  Hopefully fix default mailbox for real now
 
   27 Jul 2011; Eray Aslan <eras@gentoo.org> maildrop-2.5.4.ebuild:
   Fix for default mailbox location in configure
